# studyguru

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  test.py
Temp/: Agentflow.md  Current_Approach_Documentation.md  __init__.py
Temp/agentic_material/: __init__.py  config.py  routes.py
Temp/agentic_material/agents/: agent_registry.py  base.py  concept_explainer_agent.py  practice_recall_agent.py  quality_guardian_agent.py  student_pedagogy_agent.py  worked_example_agent.py
Temp/agentic_material/renderers/: docx_renderer.py
docs/: StudyGuru_Approach.docx  StudyGuru_LLD.docx  study-material-agent-flow.md
src/: main.py
src/api/rest/: app.py  dependencies.py
src/config/: settings.py
src/control/: __init__.py
src/control/concept_image_curation/: __init__.py  models.py
src/control/learning_bot/: __init__.py
src/control/student_quiz_generation/: __init__.py
src/control/study_material_generation/: __init__.py  auth.py  config.py  models.py  routes.py  store.py
src/core/: logging.py
src/core/services/: admin_user_app_service.py  auth_application_service.py  auth_service.py  concept_image_app_service.py  concept_image_service.py  concept_visual_microservice_client.py  enrollment_app_service.py  flashcard_app_service.py  flashcard_service.py  (+15 more)
src/schemas/: auth.py  concept_images.py  concept_visual_microservice.py  health.py  learning_bot.py  quiz.py  study_material.py
src/tools/: provision_organization_admin.py
tests/: test.py  test_object_storage_service.py  test_study_material_generation_guards.py
(+79 files in other folders)
